generator client {
  provider = "prisma-client-js"
  engineType = "library"
}

datasource db {
  provider = "mysql"
}

enum Role {
  benfek
  principal
  pharmacy
  researcher
  wholesaler
}

enum ResearcherType {
  maker
  checker
}

enum OperationalPaymentType {
  wholesaler
  delivery
}

enum OperationalPaymentStatus {
  pending
  completed
}

model User {
  id            Int            @id @default(autoincrement())
  email         String         @unique
  username      String         @unique
  password      String
  firstName     String
  lastName      String
  phone         String?        @unique
  whatsappNumber String?       @db.Text
  deliveryAddress String?      @db.Text
  dropOffAddress String?       @db.Text
  preferredPharmacyName String? @db.Text
  preferredPharmacyPhone String? @db.Text
  referPharmacy Boolean        @default(false)
  referredPharmacyName String? @db.Text
  referredPharmacyPhone String? @db.Text
  profileImageUrl String?      @db.Text
  profession String?           @db.Text
  currentPlaceOfWork String?   @db.Text
  workCityAddress String?      @db.Text
  licenseNumber String?        @db.Text
  yearsOfExperience String?    @db.Text
  preferredPaymentMethod String? @db.Text
  bankName String?             @db.Text
  accountNumber String?        @db.Text
  accountName String?          @db.Text
  role          Role           @default(benfek)
  researcherType ResearcherType?
  refreshTokens RefreshToken[]
  userId        String?        @unique
  podcasts      Podcast[]
  articles      Article[]
  supplements   Supplement[]
  researcherPacks ResearcherPack[]
  operationalPaymentsMade OperationalPayment[] @relation("OperationalPaymentMaker")
  operationalPaymentsConfirmed OperationalPayment[] @relation("OperationalPaymentChecker")
  operationalPaymentsForPrincipal OperationalPayment[] @relation("OperationalPaymentPrincipal")
  carts         Cart[]
  orders        Order[]
  payments      Payment[]
  inbox         Inbox[]
  principalNotifications PrincipalNotification[]
  wallet        Wallet?
  withdrawals   Withdrawal[]
  principalCredits PrincipalCredit[]
  nutrient      NutrientType?  // One-to-one relation, no fields/references here
  gamePoints    BenfekGamePoint?
  quizCodesCreated QuizCode[]  @relation("QuizCodeCreator") // Quiz codes created by this principal
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt
}

model OperationalPayment {
  id            Int                     @id @default(autoincrement())
  type          OperationalPaymentType
  status        OperationalPaymentStatus @default(pending)
  amount        Float
  payeeName     String
  payeeContact  String?                 @db.Text
  payeeAddress  String?                 @db.Text
  note          String?                 @db.Text
  quizCode      String?
  packId        String?

  principalId   Int?
  principal     User?                   @relation("OperationalPaymentPrincipal", fields: [principalId], references: [id], onDelete: SetNull)

  makerId       Int
  maker         User                    @relation("OperationalPaymentMaker", fields: [makerId], references: [id], onDelete: Cascade)

  confirmedById Int?
  confirmedBy   User?                   @relation("OperationalPaymentChecker", fields: [confirmedById], references: [id], onDelete: SetNull)

  createdAt     DateTime                @default(now())
  updatedAt     DateTime                @updatedAt
}

model RefreshToken {
  id        Int      @id @default(autoincrement())
  token     String   @unique
  userId    Int
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Podcast {
  id          Int      @id @default(autoincrement())
  title       String
  description String
  audioUrl    String?  @db.Text
  host        String?
  category    String?
  duration    String?
  status      String   @default("draft")
  thumbnailUrl String? @db.Text
  tags        Json?
  userId      Int
  user        User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

model Article {
  id          Int      @id @default(autoincrement())
  title       String
  description String   @db.Text
  content     String   @db.LongText
  category    String
  status      String   @default("draft") // draft, published, archived
  excerpt     String?  @db.Text
  imageUrl    String?  @db.Text
  readTime    String?
  tags        Json?
  userId      Int
  user        User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

model Supplement {
  id          Int         @id @default(autoincrement())
  name        String
  description String
  rating      Float?
  price       Float
  stock       Int
  imageUrl    String?     @db.Text // Product image URL
  category    String?     // Product category
  manufacturer String?
  strength    String?
  dosageForm  String?
  budgetRange String?
  expiryDate  DateTime?
  tags        Json?
  wholesalers Json?
  status      String      @default("in_stock")
  userId      Int
  user        User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  cartItems   CartItem[]
  orderItems  OrderItem[]
  researcherPackItems ResearcherPackItem[]
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt
}

model ResearcherPack {
  id           Int                  @id @default(autoincrement())
  quizCode     String
  packId       String
  packName     String
  rationale    String?              @db.Text
  researcherId Int
  researcher   User                 @relation(fields: [researcherId], references: [id], onDelete: Cascade)
  items        ResearcherPackItem[]
  status       String               @default("draft")
  createdAt    DateTime             @default(now())
  updatedAt    DateTime             @updatedAt

  @@unique([quizCode, packId])
}

model ResearcherPackItem {
  id           Int            @id @default(autoincrement())
  packId       Int
  pack         ResearcherPack @relation(fields: [packId], references: [id], onDelete: Cascade)
  supplementId Int
  supplement   Supplement     @relation(fields: [supplementId], references: [id], onDelete: Cascade)
  quantity     Int            @default(1)
  rationale    String?        @db.Text
  selectedWholesalerName String?
  selectedWholesalerPrice Float?
  selectedWholesalerContact String?
  selectedWholesalerAddress String?
  selectedWholesalerDetails Json?
  requiresReselection Boolean @default(false)
  dispatchedWithoutWholesaler Boolean @default(false)
  effectiveMarkupFactor Float @default(1.3)
  createdAt    DateTime       @default(now())
  updatedAt    DateTime       @updatedAt

  @@unique([packId, supplementId])
}

model Cart {
  id        Int        @id @default(autoincrement())
  userId    Int
  user      User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  items     CartItem[]
  createdAt DateTime   @default(now())
  updatedAt DateTime @updatedAt
}

model CartItem {
  id           Int        @id @default(autoincrement())
  quantity     Int
  priceAtAdd   Float?     // Price snapshot when item was added to cart
  cartId       Int
  cart         Cart       @relation(fields: [cartId], references: [id], onDelete: Cascade)
  supplementId Int
  supplement   Supplement @relation(fields: [supplementId], references: [id])
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt
}

model Order {
  id              Int         @id @default(autoincrement())
  orderNumber     String      @unique @default(uuid()) // Human-readable order reference
  userId          Int
  user            User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  items           OrderItem[]
  payment         Payment?
  status          String      @default("pending") // pending, paid, processing, shipped, delivered, cancelled
  total           Float       // Total price of the order
  totalQuantity   Int         @default(0) // Total number of items in the order
  shippingAddress String?     @db.Text
  notes           String?     @db.Text
  createdAt       DateTime    @default(now())
  updatedAt       DateTime    @updatedAt
}

model OrderItem {
  id             Int        @id @default(autoincrement())
  quantity       Int
  price          Float      // Price at time of order
  productName    String?    // Snapshot of product name
  orderId        Int
  order          Order      @relation(fields: [orderId], references: [id], onDelete: Cascade)
  supplementId   Int
  supplement     Supplement @relation(fields: [supplementId], references: [id])
  createdAt      DateTime   @default(now())
  updatedAt      DateTime   @updatedAt
}

model Payment {
  id                Int       @id @default(autoincrement())
  userId            Int
  user              User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  orderId           Int       @unique
  order             Order     @relation(fields: [orderId], references: [id])
  amount            Float
  method            String    // paystack, bank_transfer, cash, etc.
  status            String    @default("pending") // pending, success, failed, refunded
  paystackReference String?   @unique // Paystack transaction reference
  paystackTransactionId String? @unique
  paystackChannel   String?   // card, bank, ussd, qr, mobile_money, etc.
  currency          String    @default("NGN")
  paidAt            DateTime?
  metadata          String?   @db.Text // JSON string for additional payment data
  createdAt         DateTime  @default(now())
  updatedAt         DateTime  @updatedAt
}

model Inbox {
  id        Int      @id @default(autoincrement())
  userId    Int
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  subject   String
  message   String   @db.Text
  isRead    Boolean  @default(false)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model PrincipalNotification {
  id        Int      @id @default(autoincrement())
  userId    Int
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  type      String
  sourceKey String
  title     String
  message   String   @db.Text
  href      String?  @db.Text
  count     Int      @default(1)
  fingerprint String @db.Text
  isRead    Boolean  @default(false)
  isDeleted Boolean  @default(false)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([userId, sourceKey])
  @@index([userId, isRead, isDeleted])
}

model Wallet {
  id            Int          @id @default(autoincrement())
  balance       Float        @default(0)
  userId        Int          @unique
  user          User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  withdrawals   Withdrawal[]
  principalCredits PrincipalCredit[]
  createdAt     DateTime     @default(now())
  updatedAt     DateTime     @updatedAt
}

model Withdrawal {
  id            Int      @id @default(autoincrement())
  amount        Float
  userId        Int
  user          User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  walletId      Int
  wallet        Wallet   @relation(fields: [walletId], references: [id], onDelete: Cascade)
  status        String   @default("pending") // pending, completed, failed
  bankName      String
  accountNumber String
  accountName   String
  transferReference String?
  transferRecipientCode String?
  month         Int      // To track monthly withdrawals
  year          Int      // To track monthly withdrawals
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
}

model PrincipalCredit {
  id            Int      @id @default(autoincrement())
  principalId   Int
  principal     User     @relation(fields: [principalId], references: [id], onDelete: Cascade)
  walletId      Int
  wallet        Wallet   @relation(fields: [walletId], references: [id], onDelete: Cascade)
  quizCode      String
  packDbId      Int?
  packId        String
  packName      String
  benfekName    String
  orderId       Int?
  paymentId     Int?
  paymentReference String?
  supplement    String   @db.Text
  amount        Float
  costPrice     Float
  markupFactor  Float    @default(1.3)
  taxAmount     Float    @default(0)
  serviceChargeAmount Float @default(0)
  hlsCommissionAmount Float @default(0)
  principalShare Float   @default(0)
  status        String   @default("unresolved")
  details       Json?
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
}

model NutrientType {
  id            Int         @id @default(autoincrement())
  code          String
  userId        Int         @unique
  user          User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  basic         Basic?      @relation
  basicId       Int?        @unique // Field for one-to-one relation with Basic
  lifestyle     Lifestyle?  @relation
  lifestyleId   Int?        @unique // Field for one-to-one relation with Lifestyle
  preference    Preference? @relation
  preferenceId  Int?        @unique // Field for one-to-one relation with Preference
  createdAt     DateTime    @default(now())
  updatedAt     DateTime    @updatedAt
}

model Basic {
  id          Int          @id @default(autoincrement())
  nutrientId  Int          @unique // Ensures one-to-one with NutrientType
  nutrient    NutrientType @relation(fields: [nutrientId], references: [id], onDelete: Cascade)
  gender      String
  nickname    String?
  age         String
  weight      String
  height      String
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt
}

model Lifestyle {
  id          Int          @id @default(autoincrement())
  nutrientId  Int          @unique // Ensures one-to-one with NutrientType
  nutrient    NutrientType @relation(fields: [nutrientId], references: [id], onDelete: Cascade)
  habit       String
  fun         String
  routine      String
  career      String
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt
}

model Preference {
  id          Int          @id @default(autoincrement())
  nutrientId  Int          @unique // Ensures one-to-one with NutrientType
  nutrient    NutrientType @relation(fields: [nutrientId], references: [id], onDelete: Cascade)
  drugForm    String
  minBudget   Float
  maxBudget   Float
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt
}

model BenfekGamePoint {
  id        Int      @id @default(autoincrement())
  userId    Int?     @unique
  user      User?    @relation(fields: [userId], references: [id], onDelete: Cascade)
  quizCode  String?  @unique
  email     String?
  phone     String?
  points    Int      @default(0)
  metadata  Json?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

// Quiz codes for benfek registration - created by Principal when adding a benfek
model QuizCode {
  id                Int       @id @default(autoincrement())
  code              String    @unique
  isUsed            Boolean   @default(false)
  usedBy            Int?      // User ID who used this code (benfek)
  usedAt            DateTime?
  expiresAt         DateTime? // Optional expiration date
  createdBy         Int       // Principal who created this code
  creator           User      @relation("QuizCodeCreator", fields: [createdBy], references: [id])
  
  // Benfek data filled by Principal
  benfekName        String
  benfekEmail       String?
  benfekPhone       String
  benfekAge         String
  benfekGender      String
  basicNickname     String?  @db.Text
  basicWeight       String?  @db.Text
  basicHeight       String?  @db.Text
  lifestyleHabits   String?  @db.Text
  lifestyleFun      String?  @db.Text
  lifestyleDesires  String?  @db.Text
  lifestylePriority String?  @db.Text
  preferenceDrugForm String? @db.Text
  preferenceBudget  Float?
  allergies         Json?
  scares            Json?     // Health issues that scare them
  familyCondition   Json?     // Family's notable health condition
  medications       Json?     // Current medications
  currentConditions Json?
  hasCurrentCondition Boolean @default(false)
  
  createdAt         DateTime  @default(now())
  updatedAt         DateTime  @updatedAt
}

